[package]
name = "yoursql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.68"
sled = "0.34.7"
tracing = "0.1.38"
tracing-subscriber = "0.3.0"
chrono = {version="0.4.24", features=["serde"]}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0.40"
async-fs = "1.6.0"
