[package]
name = "yoursql"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.68"
sled = "0.34.7"
tracing = "0.1.38"
tracing-subscriber = {version="0.3.0", features=["env-filter"]}
chrono = {version="0.4.24", features=["serde"]}
serde = { version = "1.0", features = ["derive", "rc"] }
dashmap = "5.4.0"
bincode = "1.3.3"
thiserror = "1.0.40"
async-fs = "1.6.0"
futures-async-stream = "0.2"
futures="0.3"
derivative = "2.2.0"
sqlparser = "0.34.0"
opensrv-mysql = "0.4.0"
mysql_common = "0.30.4"
parking_lot = "0.12.1"
uuid = { version="1.0", features=["v4"] }
